# ai-copilot

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
benchmark/embeddings/: compare_sentence_embeddings.py
benchmark/embeddings/results/: sentence_transformer_comparision_results.csv
config/: embedding_model_config.json  gpt_model_config.json  pinecone_config.json  prompts_catalog.json  prompts_config.json  transformers_comparisons.json
data/sample/docs/: 243709 Horton Tracy  12-14-2022.ptx  35-2021-CA-001778-AXXX-XX Horton, Tracy vs Taintor, Margaret.eml  LOP-Florida Pain Care Dr. Dan Shaffer.docx
data/sample/docs/extracted/: HortonTracy-12-14-2022-Original.json  aDu3c00000AYllYCAT.json
scripts/: generate_embeddings.py  generate_sanitized_docs.py  get_openai_gpt4_response.py  get_openai_models.py  insert_embeddings_pinecone.py  query_local_embeddings.py  query_pinecone_embeddings.py
xpilot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xpilot/embeddings/docs/: embeddings_service.py  generate_embeddings.py  insert_embeddings_pinecone.py
xpilot/processor/docs/: documen_service.py  document_parser.py  document_service.py
xpilot/vector/pinecone/: pinecone_service.py  query_pinecone_embeddings.py
xpilot/visualize/: nomic_atlas_visualizer.py
