[project]
name = "xpilot"
version = "0.0.1"
authors = [
  { name="Mahendra Kutare", email="m@centagonx.com" },
]
description = "A library to build LLM apps"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/xpilot"
"Bug Tracker" = "https://github.com/pypa/xpilot/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["xpilot", "xpilot.embeddings", "xpilot.processor", "xpilot.vector", "xpilot.vector.pinecone", "xpilot.visualize"]